[gd_scene load_steps=6 format=3 uid="uid://das51ndqccrnl"]

[ext_resource type="Texture2D" uid="uid://msvueprywdfy" path="res://icon.svg" id="1_m20yq"]
[ext_resource type="Texture2D" uid="uid://b8jgee5bey3gb" path="res://Assets/Sprites/Misc/blank_white_square.png" id="2_apxg4"]
[ext_resource type="Script" path="res://Assets/Scripts/skill_button.gd" id="2_yvfjb"]
[ext_resource type="FontFile" uid="uid://bw5hx54qy1cr7" path="res://Assets/Fonts/m5x7.ttf" id="4_rbgfd"]

[sub_resource type="LabelSettings" id="LabelSettings_dto7h"]
font = ExtResource("4_rbgfd")
font_size = 28
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="SkillButton" type="TextureButton"]
custom_minimum_size = Vector2(60, 60)
offset_right = 45.0
offset_bottom = 45.0
texture_normal = ExtResource("1_m20yq")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_yvfjb")

[node name="CooldownProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("2_apxg4")
tint_progress = Color(0, 0, 0, 0.649)

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 4.0
offset_right = 44.0
offset_bottom = 30.0
grow_vertical = 2
text = "time
"
label_settings = SubResource("LabelSettings_dto7h")
horizontal_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
